docker/elasticservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticservice
  name: elasticservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elasticservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-backend: "true"
        io.kompose.service: elasticservice
    spec:
      containers:
        - env:
            - name: CONFIGSERVER_PORT
              value: "8071"
            - name: CONFIGSERVER_URI
              value: http://localhost:8071
            - name: PROFILE
              value: dev
          image: us-central1-docker.pkg.dev/big-data-architecture-202303/meme-backend/elastic-service:latest
          name: elasticservice
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
