docker/eurekaserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: eurekaserver
  name: eurekaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eurekaserver
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-backend: "true"
        io.kompose.service: eurekaserver
    spec:
      containers:
        - image: us-central1-docker.pkg.dev/big-data-architecture-202303/meme-backend/eureka-server:latest
          name: eurekaserver
          ports:
            - containerPort: 8070
          resources: {}
      restartPolicy: Always
status: {}
