docker/gatewayserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: gatewayserver
  name: gatewayserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gatewayserver
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-backend: "true"
        io.kompose.service: gatewayserver
    spec:
      containers:
        - env:
            - name: CONFIGSERVER_PORT
              value: "8071"
            - name: CONFIGSERVER_URI
              value: http://configserver:8071
            - name: EUREKASERVER_PORT
              value: "8070"
            - name: EUREKASERVER_URI
              value: http://eurekaserver:8070/eureka/
            - name: PROFILE
              value: default
            - name: SERVER_PORT
              value: "8072"
          image: us-central1-docker.pkg.dev/big-data-architecture-202303/meme-backend/gateway-server:latest
          name: gatewayserver
          ports:
            - containerPort: 8072
          resources: {}
      restartPolicy: Always
status: {}
