docker/configserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: configserver
  name: configserver
spec:
  ports:
    - name: "8071"
      port: 8071
      targetPort: 8071
  selector:
    io.kompose.service: configserver
status:
  loadBalancer: {}
